# crabtrap

./: Cargo.toml  Dockerfile  README.md
sample_program/: child.c  config.yaml  dynamic.c  printf_wrapper.c  static.c
src/: config.rs  lib.rs  main.rs  map.rs
tests/: exec.rs
