[package]
name = "crabtrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["process", "ptrace", "signal"] }
serde = { version = "1.0.203", features = ["derive"] }
syscalls = { version = "0.6.18", features = ["serde", "aarch64"] }
