[package]
name = "crabtrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
nix = { version = "0.29.0", features = ["process", "ptrace", "signal"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
syscalls = { version = "0.6.18", features = ["serde", "aarch64"] }
thiserror = "1.0.61"
